--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Eduardo da Silva Vaz</h1>
-  <img src="./Web Development Projects/Corrículo/Foto.jpg" alt="profile image of Eduardo Vaz" height="100">
+  <img src="./Foto.png" alt="profile image of Eduardo Vaz" height="100">
 
   <h2>Summary</h2>
   <p>Obtenho responsabilidade e comprometimento com os meus deveres e fundamentos morais, tenho capacidade de aprendizado, reconheço as minhas falhas e aceito receber críticas para evolução profissional e pessoal, sou um bom ouvinte para obter conhecimento. Me considero ser um bom analista para estudar problemas e trazer soluções eficazes, me vejo uma pessoa calma, tranquila, comunicativa e sempre mantenho o bom humor entre colegas, buscando manter um ambiente agradável e saudável.</p>
@@ -56,8 +56,10 @@
     <ul>
         <li>Despachos diários, elaboração de sentença, pesquisa de jurisprudência, preparo de audiências, atendimento ao advogado, auxílio ao juiz e equipe de assessoria, manuseio com o sistema jurídico entre outros.</li>
     </ul>
+    <li>
     <h3>ORDEM DOS ADVOGADOS DO BRASIL/RS - SAAI – SERVIÇO DE ATENDIMENTO AO ADVOGADO DO INTERIOR</h3>
-    <p>Período: 20/12/2010 à 06/04/2012 - Estagiário</p>
+    </li>
+   <p>Período: 20/12/2010 à 06/04/2012 - Estagiário</p>
     <ul>
         <li>Pesquisa de jurisprudência, atendimento geral ao advogado no setor e por telefone, diligências junto aos prédios do Foro Central, TJ/RS, TRT e TRF4 para protocolo de peças e recursos, extração de cópias e resolução de problemas.</li>
     </ul>
